common/config: Fix dumping of `md_config_t::config_options`.

Caused by 49a5e775aa92a8218bb659909de20637d5aa660a

This fixes the dashboard_v2 `cluster_conf` endpoint.

Fixes: http://tracker.ceph.com/issues/23265

Signed-off-by: Sebastian Wagner <sebastian.wagner@suse.com>
(cherry picked from commit 0ad029f2ea28022865b38f3dcdc5cc1c6f7ecbe9)
Signed-off-by: Ernesto Puerta <epuertat@redhat.com>